--- a/css/buttons.css
+++ b/css/buttons.css
@@ -19,12 +19,12 @@
     position: fixed;
     bottom: 8rem;
     right: 5rem;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.466));
+    background-color: transparent;
     backdrop-filter: blur(5px);
     border-radius: 5px;
-    padding: 2px;
-    
+    filter: drop-shadow(0 0 6px rgba(126, 255, 158, 0.5));
     z-index:2;
+    
     
 }
 .carusel-btn{
@@ -192,12 +192,15 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    
 }
 .aprove{
     background: var(--color-done);
+    
 }
 .abandon{
     background: var(--color-danger);
+    
 }
     
 .dot {
@@ -228,9 +231,9 @@
 }
 
 .play-btn{
-    color: var(--color-accent-light);
-    border: 2px solid var(--color-accent-border);
-    background-color: rgba(107, 205, 206, 0.1);
+    color: var(--play-btn-light);
+    border: 2px solid var(--play-btn-border);
+    background-color: var(--play-btn-bg);
 }
 .play-btn svg{
     color: var(--color-accent-light);
@@ -284,10 +287,11 @@
     border-radius: 10px 0 0 0 ;
 }
 .import-btn {
-    background-color: var(--color-accent);
+    background-color: var(--pause-btn-background);
     
-    box-shadow: 0px 5px 10px var(--color-divider);
-    color: var(--color-text-primiary-contrast);
+
+    
+    color: var(--pause-btn-main);
     width: 50%;
     border-radius: 0 10px 0 0 ;
 }
