--- a/css/layout.css
+++ b/css/layout.css
@@ -29,12 +29,18 @@
 
 
   /*  Elementy UI */
+  --play-btn-light:#9be5ec;
+  --play-btn-border:#44787c;
+  --play-btn-bg:rgba(107, 205, 206, 0.1);
+
   --continue-btn-light: #62c76b;
   --continue-btn-border: #4fa859;
   --continue-btn-bg: rgba(98, 199, 107, 0.1);
+
   --pause-btn-main:#e3b341;
   --pause-btn-border:#d6a835;
   --pause-btn-background:rgba(227, 179, 65, 0.1);
+
   --color-red-btn:#db5656;
   --color-text-small:#333;
   --color-text-primiary-contrast:#1D2B36;
