--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -294,7 +294,7 @@
     align-items: flex-start;
     
     background-color: var(--color-hamburger);
-    box-shadow: 0px 5px 10px var(--color-divider);
+    
   }
   .modal-tab-bar{
     display: flex;
@@ -399,9 +399,10 @@
   display: flex;
   width: 100%;
   height: 16rem;
-  background-color: var(--color-accent);
-  top: 90%;
- flex-direction: column;
+  background-color: var(--pause-btn-background);
+  
+  top: 99%;
+  flex-direction: column;
   border-radius:  0 0 10px 10px;
 }
 .new-import-title {
@@ -411,12 +412,12 @@
     margin-top: .5rem;
     justify-content: center;
     position: relative;
-    color: var(--color-text-primiary-contrast);
+    color: var(--pause-btn-main);
 }
 .new-import-title::after{
     content: '';
     position: absolute;
-    border-bottom: solid 0.5px var(--color-text-secondary-contrast);
+    border-bottom: solid 0.5px var(--pause-btn-main);
     width: 80%;
     top: 1.5rem;
     margin-top: 0.5rem;
@@ -436,9 +437,9 @@
     height: 70%;
     position: relative;
     display: flex;
-    background: var(--color-accent-blur);
+    background: rgba(189, 145, 42, 0.1);
     border:none; 
-    border: .5px solid var(--color-text-secondary-contrast);
+    border: .5px solid var(--pause-btn-border);
     outline: none;
     border-radius: 5px;
     color: var(--color-text-secondary);
@@ -462,7 +463,7 @@
     margin-top: 1rem;
     display: flex;
     width: 100%;
-    color: var(--color-text-small);
+    color: var(--pause-btn-main);
     font-size: 10px;
     justify-content: center;
     
@@ -540,7 +541,7 @@
     margin-left: 1rem;
     position: fixed;
     cursor: pointer;
-    z-index: 999;
+    z-index: 5;
   }
   .disabled-node {
     opacity: .2;
@@ -560,7 +561,7 @@
   .connection-glow  {
   filter: drop-shadow(2px 2px 6px #6BCDCE);
 }
-.add-btn-container {}
+
 
     
     
