--- a/css/animations.css
+++ b/css/animations.css
@@ -27,3 +27,14 @@
   transition: opacity 0.3s ease;
   opacity: 0;
 }
+@keyframes dashMove {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: -200;
+  }
+}
+.dash-animate {
+  animation: dashMove 2s ease-out ;
+}
