--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -563,7 +563,10 @@
   .connection-glow  {
   filter: drop-shadow(2px 2px 6px #6BCDCE);
 }
-
+.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
 
     
     
