--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -33,12 +33,12 @@ li:first-of-type .title-roudmap::after {
   
   height: 2rem;
   display: flex;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   border-radius: 8px 8px 0 0;
   justify-content: center;
   position: relative;
-  letter-spacing: 1px;
+  padding:.2rem 0 .5rem 0;
   flex-direction: row;
   align-items: center;
   
@@ -60,9 +60,10 @@ li:first-of-type .title-roudmap::after {
 .roadmap-node {
   background: var(--color-bg-soft);
   border: 0.5px solid var(--glass-border); 
-  overflow: hidden;
-  width: 14rem;
-  will-change: height;
+  overflow: visible;
+  max-width: 15rem;
+  max-height: initial;
+  min-height: 8rem;
   position: relative;
   display: flex;
   justify-content: space-around; 
@@ -141,12 +142,14 @@ li:first-of-type .title-roudmap::after {
   display: flex;
   align-items: center;
   font-weight: 500;
-  font-size: 10px;
+  font-size: 9px;
   border-radius: 0 0 10px 10px;
   letter-spacing: 1px;
   padding: .1rem;
-  position: relative;
+  position: absolute;
   margin-top: .5rem;
+  top: 1rem;
+  right: 6%
   
   
   
@@ -161,6 +164,7 @@ li:first-of-type .title-roudmap::after {
   display: flex;
   position: relative;
   width: 100%;
+  min-height:  2rem;
   margin: .5rem 0 0 1rem;
   padding:.1rem 0 .1rem 0 ;
   border-radius: 10px 10px 0 0;
@@ -207,7 +211,9 @@ li:first-of-type .title-roudmap::after {
 .subtask-list{
   display:flex;
   flex-wrap: wrap;
-  overflow: hidden;
+  overflow-y: auto;
+  max-height: 15rem;
+  margin-top: .5rem;
   
 }
 .subtask-item{
@@ -550,10 +556,17 @@ li:first-of-type .title-roudmap::after {
     opacity: .5;
     filter: grayscale(1);
     pointer-events: none;
-    width: 10rem;
-    
-    
+    max-width: 12rem;
+    min-height: 5rem;
   }
+  .disabled-node .node-text{
+    font-size: 14px;
+  }
+  .disabled-node .subtask-text{
+    font-size: 10px;
+  }
+    
+    
   .disabled-node .node-acc-btn{
     pointer-events: all;
   }
