--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,55 @@
 /* Karty, modale */
 /* Glassmorphic okna */
 /*  Akcenty */
+.calendar__button {
+  color: #aaaaaa;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 1rem;
+  height: 1rem;
+  margin: 0 0.5rem;
+}
+
+.calendar__weekday-btn {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 300;
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 3rem;
+  height: 2rem;
+  margin: 0 0.5rem;
+  font-size: 12px;
+  line-height: 2rem;
+  padding-bottom: 0.25rem;
+  border-right: 1px solid rgba(117, 112, 112, 0.404);
+  transition: border-color 0.2s ease;
+  transition: width 0.2s ease;
+  border-image: linear-gradient(to bottom, transparent 30%, rgba(117, 112, 112, 0.404)) 1;
+  margin: 0;
+}
+.calendar__weekday-btn.is-active {
+  width: 4rem;
+  color: #6bcdce;
+  background: linear-gradient(to bottom, transparent, rgba(107, 205, 206, 0.1));
+  font-size: 14px;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-bottom: 2px solid transparent;
+  border-image: linear-gradient(to bottom, transparent 50%, #6bcdce) 1;
+  border-radius: 0 0 7px 7px;
+  border-bottom-color: #6bcdce;
+  font-weight: 400;
+  filter: drop-shadow(1px 2px 5px #44787c);
+}
+.calendar__weekday-btn:last-child {
+  border-right: none;
+}
+
 .calendar__section {
   display: flex;
   justify-content: center;
@@ -31,12 +80,17 @@
 }
 .calendar__months-carousel {
   display: flex;
+  width: 4.5rem;
   flex-wrap: nowrap;
   overflow-x: auto;
   gap: 1rem;
   scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   scroll-snap-type: x mandatory;
-  width: 4.5rem;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
 }
 .calendar__months-carousel > * {
   scroll-snap-align: start;
@@ -45,10 +99,6 @@
 .calendar__months-carousel::-webkit-scrollbar {
   display: none;
 }
-.calendar__months-carousel {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
 .calendar__days {
   display: flex;
   justify-content: center;
@@ -56,27 +106,13 @@
   position: relative;
   width: 100%;
   height: 100%;
-}
-.calendar__days-carousel {
-  display: flex;
-  flex-wrap: nowrap;
+  margin: 1rem 0;
   overflow-x: auto;
-  gap: 1rem;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
 }
-.calendar__days-carousel > * {
-  scroll-snap-align: start;
-  flex-shrink: 0;
-}
-.calendar__days-carousel::-webkit-scrollbar {
-  display: none;
-}
-.calendar__days-carousel {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-.calendar__days-carousel {
+.calendar__days-selector {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 90%;
 }
 
