--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -1,4 +1,5 @@
 // Mixins:
+@use '../variables/variables' as var;
 @mixin flex-center($full-size:true) {
     display: flex;
     justify-content: center;
@@ -19,21 +20,25 @@
     position: relative;
     width: 100%;
 }
-@mixin flex-between {
+@mixin flex-between($width) {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: $width;
+    
 }
-@mixin horizontal-carousel($gap: 1rem, $scrollSnap: true) {
+@mixin horizontal-carousel($gap: 1rem, $scrollSnap: true,$width) {
     display: flex;
+    width: $width;
     flex-wrap: nowrap;
     overflow-x: auto;
     gap: $gap;
     scroll-behavior: smooth;
-
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     @if $scrollSnap{
         scroll-snap-type: x mandatory;
-        > * {
+        > * {  //all childs
             scroll-snap-align: start;
             flex-shrink: 0;
         }
@@ -41,8 +46,29 @@
     &::-webkit-scrollbar {
         display: none;
     }
-    & {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    }
+}
+    
+   
+@mixin set-text($weight-name, $variant: 'main') {
+  @if $variant == 'main' {
+    color: var.$textPrimary;
+    font-size: 18px;
+  } @else if $variant == 'secondary' {
+    color: var.$textSecondary;
+    font-size: 16px;
+  } @else if $variant == 'emphasized' {
+    color: var.$textPrimary;
+    font-size: 16px;
+  }
+
+  font-weight: map-get(var.$font-weights, $weight-name);
+}
+@mixin calendar-button($width:1rem,$height:1rem, $weight-name, $variant: 'main') {
+  @include set-text($weight-name, $variant);
+  border: none;
+  outline: none;
+  background: transparent;
+  width: $width;
+  height: $height;
+  margin: 0 0.5rem;
 }
