--- a/css/main.css
+++ b/css/main.css
@@ -115,5 +115,41 @@
   align-items: center;
   width: 90%;
 }
+.calendar__grid {
+  position: relative;
+  height: calc(100vh - 25rem);
+  overflow-y: auto;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  overscroll-behavior: contain;
+  width: 80%;
+  margin-top: 0.5rem;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.calendar__grid::-webkit-scrollbar {
+  display: none;
+}
+.calendar__grid-list {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(17, 4rem);
+  row-gap: 1px;
+  border-top: 1px solid rgba(117, 112, 112, 0.404);
+  border-image: linear-gradient(to left, transparent 1%, rgba(117, 112, 112, 0.404)) 1;
+}
+.calendar__grid:first-child {
+  padding-top: 2rem;
+}
+.calendar__grid-hour-slot {
+  position: relative;
+  padding-left: 1rem;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #aaaaaa;
+  border-bottom: 1px solid rgba(117, 112, 112, 0.404);
+  border-image: linear-gradient(to left, transparent 1%, rgba(117, 112, 112, 0.404)) 1;
+}
 
 /*# sourceMappingURL=main.css.map */
