--- a/scss/layouts/_calendar.scss
+++ b/scss/layouts/_calendar.scss
@@ -20,7 +20,6 @@
               
         }
     }
-            
     //days
     &__days{
         @include mixins.flex-center;
@@ -29,10 +28,51 @@
        &-selector{
         @include mixins.flex-between(90%);
        }
-           
-            
+    }
+    //Hour grid
+    &__grid{
+        position: relative;
+        height: calc(100vh - 25rem);
+        overflow-y: auto;
+        scroll-snap-type: y mandatory;
+        scroll-behavior: smooth;
+        overscroll-behavior: contain;
+        width: 80%;
+        margin-top: .5rem;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+        &::-webkit-scrollbar {
+           display: none;
+        };
+        &-list{
+            position: relative;
+            display: grid;
+            grid-template-rows: repeat(17,4rem);
+            row-gap: 1px;
+            border-top: 1px solid var.$divider;
+            border-image: linear-gradient(to left, transparent 1%, var.$divider,) 1;
+        }
+        &:first-child{
+            padding-top: 2rem;
+        }
+        &-hour-slot{
+            position: relative;
+            padding-left: 1rem;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            color: var.$textSecondary;
+            border-bottom: 1px solid var.$divider;
+            border-image: linear-gradient(to left, transparent 1%, var.$divider,) 1;
         }
     }
+           
+            
+    }
+        
+        
+ 
+            
 
             
             
