--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -7,6 +7,9 @@ $textSecondary: #aaaaaa;
 $divider: rgba(117, 112, 112, 0.404);
 $bgMajor: #262629;
 $activedayBG: rgba(107, 205, 206, 0.1);
+$filterGreen:#62c76b;
+$itemMedium: #FF8C32;
+$itemHigh: #db5656;
 
 /*  Akcenty */
 $accent: #6bcdce;
