--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -72,3 +72,25 @@
   height: $height;
   margin: 0 0.5rem;
 }
+@mixin no-text-btn($size,$color){
+  border: none;
+  outline: none;
+  background: transparent;
+  width: $size ;
+  height: $size;
+  margin: 0 0.5rem;
+  color: $color;
+  filter: drop-shadow(5px 8px 15px darken($color,20%));
+}
+@mixin glass-modal($minor:false){
+  background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
+  backdrop-filter: blur(20px) saturate(120%);
+  -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
+  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.05),
+             0 8px 24px rgba(0, 0, 0, 0.6);
+  @if $minor{
+    background: rgba(65, 65, 65, 0.164);
+  }
+ }
+ 
+  
