--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -4,6 +4,7 @@ $bgSoft: #1c1c1e; /* Karty, modale */
 $glassBg: rgba(22, 22, 22, 0.6); /* Glassmorphic okna */
 $textPrimary: #ffffff; 
 $textSecondary: #aaaaaa;
+$textBlack:#000;
 $divider: rgba(117, 112, 112, 0.404);
 $bgMajor: #262629;
 $activedayBG: rgba(107, 205, 206, 0.1);
