--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@
 }
 .calendar__months-carousel {
   display: flex;
-  width: 4.5rem;
+  width: 6rem;
   flex-wrap: nowrap;
   overflow-x: auto;
   gap: 1rem;
@@ -99,6 +99,19 @@
 }
 .calendar__months-carousel::-webkit-scrollbar {
   display: none;
+}
+.calendar__months-carousel-month {
+  justify-content: center;
+  display: flex;
+  scroll-snap-align: center;
+  flex: 0 0 100%;
+  text-align: center;
+  width: 4.5rem;
+}
+.calendar__months-carousel-month.--active {
+  color: #9be5ec;
+  text-decoration: underline;
+  text-underline-offset: 0.4rem;
 }
 .calendar__days {
   display: flex;
@@ -207,7 +220,8 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
-  padding: 1rem;
+  padding: 2rem;
+  flex-wrap: nowrap;
 }
 .task-drawer__task-list > * {
   scroll-snap-align: start;
@@ -217,7 +231,7 @@
   display: none;
 }
 .task-drawer__task-list-item {
-  overflow-wrap: break-word;
+  overflow: hidden;
   min-width: 6rem;
   min-height: 4rem;
   border-radius: 5px;
@@ -228,23 +242,67 @@
   box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.05), 0 8px 24px rgba(0, 0, 0, 0.6);
   background: rgba(65, 65, 65, 0.164);
 }
-.task-drawer__task-list-item__drag-handle {
+.task-drawer__drag-handle {
   width: 100%;
-  padding: 0.1rem;
-  font-size: 13px;
-  color: #000;
-  font-weight: 600;
+  overflow: hidden;
   background-color: #62c76b;
   position: absolute;
   border-radius: 5px 5px 0 0;
   top: 0;
   left: 0;
 }
-.task-drawer__task-list-item__drag-handle.prio-medium {
+.task-drawer__drag-handle.prio-medium {
   background-color: #FF8C32;
 }
-.task-drawer__task-list-item__drag-handle.prio-height {
+.task-drawer__drag-handle.prio-height {
   background-color: #db5656;
+}
+.task-drawer__drag-title {
+  display: inline-block;
+  color: #000;
+  font-weight: 600;
+  font-size: 13px;
+  position: relative;
+  white-space: nowrap;
+}
+.task-drawer .marquee {
+  animation: scroll-left 10s linear infinite;
+}
+.task-drawer__task-info-btn {
+  position: absolute;
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 0 0.5rem;
+  color: #000;
+  filter: drop-shadow(5px 8px 15px black);
+  background-color: #62c76b;
+  height: 2.5rem;
+  right: -0.8rem;
+  transform: skewX(-45deg);
+  bottom: -0.8rem;
+}
+.task-drawer__task-info-btn.prio-medium {
+  background-color: #FF8C32;
+}
+.task-drawer__task-info-btn.prio-height {
+  background-color: #db5656;
+}
+.task-drawer__task-info-btn svg {
+  margin-top: 0.3rem;
+  transform: skewX(45deg);
+  width: 1rem;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
