--- a/css/main.css
+++ b/css/main.css
@@ -14,43 +14,6 @@
   margin: 0 0.5rem;
 }
 
-.calendar__weekday-btn {
-  color: #ffffff;
-  font-size: 16px;
-  font-weight: 300;
-  border: none;
-  outline: none;
-  background: transparent;
-  width: 3rem;
-  height: 2rem;
-  margin: 0 0.5rem;
-  font-size: 12px;
-  line-height: 2rem;
-  padding-bottom: 0.25rem;
-  border-right: 1px solid rgba(117, 112, 112, 0.404);
-  transition: border-color 0.2s ease;
-  transition: width 0.2s ease;
-  border-image: linear-gradient(to bottom, transparent 30%, rgba(117, 112, 112, 0.404)) 1;
-  margin: 0;
-}
-.calendar__weekday-btn.is-active {
-  width: 4rem;
-  color: #6bcdce;
-  background: linear-gradient(to bottom, transparent, rgba(107, 205, 206, 0.1));
-  font-size: 14px;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-  border-bottom: 2px solid transparent;
-  border-image: linear-gradient(to bottom, transparent 50%, #6bcdce) 1;
-  border-radius: 0 0 7px 7px;
-  border-bottom-color: #6bcdce;
-  font-weight: 400;
-  filter: drop-shadow(1px 2px 5px #44787c);
-}
-.calendar__weekday-btn:last-child {
-  border-right: none;
-}
-
 .calendar__section {
   display: flex;
   justify-content: center;
@@ -108,10 +71,14 @@
   text-align: center;
   width: 4.5rem;
 }
-.calendar__months-carousel-month.--active {
+.calendar__months-carousel-month--active {
   color: #9be5ec;
   text-decoration: underline;
   text-underline-offset: 0.4rem;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  width: 4.5rem;
 }
 .calendar__days {
   display: flex;
@@ -176,7 +143,7 @@
   background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
   backdrop-filter: blur(20px) saturate(120%);
   -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
-  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.05), 0 8px 24px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 1px 1px rgba(200, 220, 255, 0.35), 0 8px 15px rgba(200, 220, 255, 0.15);
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -239,7 +206,7 @@
   background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
   backdrop-filter: blur(20px) saturate(120%);
   -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
-  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.05), 0 8px 24px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 1px 1px rgba(200, 220, 255, 0.35), 0 8px 15px rgba(200, 220, 255, 0.15);
   background: rgba(65, 65, 65, 0.164);
 }
 .task-drawer__drag-handle {
@@ -252,9 +219,9 @@
   left: 0;
 }
 .task-drawer__drag-handle.prio-medium {
-  background-color: #FF8C32;
+  background-color: #ff8c32;
 }
-.task-drawer__drag-handle.prio-height {
+.task-drawer__drag-handle.prio-high {
   background-color: #db5656;
 }
 .task-drawer__drag-title {
@@ -285,15 +252,42 @@
   bottom: -0.8rem;
 }
 .task-drawer__task-info-btn.prio-medium {
-  background-color: #FF8C32;
+  background-color: #ff8c32;
 }
-.task-drawer__task-info-btn.prio-height {
+.task-drawer__task-info-btn.prio-high {
   background-color: #db5656;
 }
 .task-drawer__task-info-btn svg {
   margin-top: 0.3rem;
   transform: skewX(45deg);
   width: 1rem;
+}
+.task-drawer__tooltip {
+  display: flex;
+  position: absolute;
+  box-shadow: inset 0 1px 1px rgba(200, 220, 255, 0.35), 0 8px 15px rgba(200, 220, 255, 0.15);
+  max-width: 15rem;
+  padding: 0.5rem;
+  top: -5rem;
+  border-radius: 5px;
+  background: #1c1c1e;
+  border: 1px solid rgba(107, 106, 106, 0.1);
+  text-align: center;
+}
+.task-drawer__tooltip > p {
+  font-size: 12px;
+}
+.task-drawer__tooltip::after {
+  content: "";
+  border-bottom: 2px solid rgba(107, 106, 106, 0.1);
+  border-right: 2px solid rgba(107, 106, 106, 0.1);
+  position: absolute;
+  top: 80%;
+  left: 5%;
+  transform: rotate(45deg);
+  width: 1rem;
+  height: 1rem;
+  background: #1c1c1e;
 }
 
 @keyframes scroll-left {
@@ -303,6 +297,42 @@
   100% {
     transform: translateX(-100%);
   }
+}
+.calendar__weekday-btn {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 300;
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 3rem;
+  height: 2rem;
+  margin: 0 0.5rem;
+  font-size: 12px;
+  line-height: 2rem;
+  padding-bottom: 0.25rem;
+  border-right: 1px solid rgba(117, 112, 112, 0.404);
+  transition: border-color 0.2s ease;
+  transition: width 0.2s ease;
+  border-image: linear-gradient(to bottom, transparent 30%, rgba(117, 112, 112, 0.404)) 1;
+  margin: 0;
+}
+.calendar__weekday-btn.is-active {
+  width: 4rem;
+  color: #6bcdce;
+  background: linear-gradient(to bottom, transparent, rgba(107, 205, 206, 0.1));
+  font-size: 14px;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-bottom: 2px solid transparent;
+  border-image: linear-gradient(to bottom, transparent 50%, #6bcdce) 1;
+  border-radius: 0 0 7px 7px;
+  border-bottom-color: #6bcdce;
+  font-weight: 400;
+  filter: drop-shadow(1px 2px 5px #44787c);
+}
+.calendar__weekday-btn:last-child {
+  border-right: none;
 }
 
 /*# sourceMappingURL=main.css.map */
