--- a/scss/components/_task-drawer.scss
+++ b/scss/components/_task-drawer.scss
@@ -1,111 +1,123 @@
-@use '../variables/variables' as var;
-@use '../variables/mixins';
-.task-drawer{
+@use "../variables/variables" as var;
+@use "../variables/mixins";
+// bottom task drawer
+.task-drawer {
+  @include mixins.flex-center-column;
+  @include mixins.glass-modal;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  min-height: 15rem;
+  transform: translateY(80%);
+  transition: transform 0.3s ease;
+  border-top: 1px solid rgba(255, 255, 255, 0.185);
+
+  &__btn-container {
     @include mixins.flex-center-column;
-    @include mixins.glass-modal;
+    position: absolute;
+    top: 0.5rem;
+  }
+  &__btn {
+    @include mixins.no-text-btn(1.5rem, var.$filterGreen);
+  }
+  &.is-open {
+    transform: translateY(-0%);
+  }
+  &__task-list {
+    gap: 1rem;
+    @include mixins.horizontal-carousel($width: 75%);
+    padding: 2rem;
+    flex-wrap: nowrap;
+    &-item {
+      overflow: hidden;
+      min-width: 6rem;
+      min-height: 4rem;
+      border-radius: 5px;
+      padding: 0.5rem;
+      @include mixins.glass-modal($minor: true);
+    }
+  }
+
+  &__drag-handle {
     width: 100%;
-    position: fixed;
-    bottom: 0;
+
+    overflow: hidden;
+    background-color: var.$filterGreen;
+    position: absolute;
+    border-radius: 5px 5px 0 0;
+    top: 0;
     left: 0;
-    min-height: 15rem;
-    transform: translateY(80%);
-    transition: transform 0.3s ease;
-    border-top: 1px solid rgba(255, 255, 255, 0.185); 
-    
-    &__btn-container{
-        @include mixins.flex-center-column;
-        position: absolute;
-        top: .5rem;
-        
+    &.prio-medium {
+      background-color: var.$itemMedium;
     }
-    &__btn{
-        @include mixins.no-text-btn(1.5rem,var.$filterGreen)
+    &.prio-high {
+      background-color: var.$itemHigh;
     }
-    &.is-open{
-        transform: translateY(-0%);
-    }
-    &__task-list{
-        gap: 1rem;
-        @include mixins.horizontal-carousel($width:75%);
-        padding: 2rem;
-        flex-wrap: nowrap;
-        &-item{
-             overflow: hidden;
-            min-width: 6rem;
-            min-height: 4rem;
-            border-radius: 5px;
-            padding: .5rem;
-            @include mixins.glass-modal($minor: true);
-                 }
-        }
-            
-            
-    &__drag-handle{
-        width: 100%;
-        
-        overflow: hidden;
-        background-color: var.$filterGreen;
-        position: absolute;
-        border-radius: 5px 5px 0 0;
-        top: 0;
-        left: 0;
-        &.prio-medium{
-            background-color: var.$itemMedium;
-        }
-        &.prio-height{
-            background-color: var.$itemHigh;
-        }
-    }
-        
-    &__drag-title{
-        display: inline-block;
-        color: var.$textBlack;
-        font-weight: 600;
-        font-size: 13px;
-        position: relative;
-        white-space: nowrap;
-    }
-    .marquee{
-           animation: scroll-left 10s linear infinite;
-       }
-    &__task-info-btn{
-        position: absolute;
-        @include mixins.no-text-btn(1.5rem,var.$textBlack);
-        background-color: var.$filterGreen;
-        height: 2.5rem;
-        
-        right: -.8rem;
-        
-        transform: skewX(-45deg);
-        bottom: -.8rem;
-         &.prio-medium{
-            background-color: var.$itemMedium;
-        }
-        &.prio-height{
-            background-color: var.$itemHigh;
-        }
-        svg{
-            
-             margin-top: .3rem;
-            
-            transform: skewX(45deg);
-            width: 1rem;
-        }
-        
-    }
-    
-     }  
-        
-                
-        
-        
-       
-    
+  }
 
-                
-       
+  &__drag-title {
+    display: inline-block;
+    color: var.$textBlack;
+    font-weight: 600;
+    font-size: 13px;
+    position: relative;
+    white-space: nowrap;
+  }
+  .marquee {
+    animation: scroll-left 10s linear infinite;
+  }
+  &__task-info-btn {
+    position: absolute;
+    @include mixins.no-text-btn(1.5rem, var.$textBlack);
+    background-color: var.$filterGreen;
+    height: 2.5rem;
+    right: -0.8rem;
 
+    transform: skewX(-45deg);
+    bottom: -0.8rem;
+    &.prio-medium {
+      background-color: var.$itemMedium;
+    }
+    &.prio-high {
+      background-color: var.$itemHigh;
+    }
+    svg {
+      margin-top: 0.3rem;
+      transform: skewX(45deg);
+      width: 1rem;
+    }
+  }
+  &__tooltip {
+    display: flex;
+    position: absolute;
+    box-shadow: var.$shadow-light;
+    max-width: 15rem;
+    padding: 0.5rem;
+    top: -5rem;
+    border-radius: 5px;
+    background: var.$bgSoft;
+    border: 1px solid var.$borderOne;
 
+    text-align: center;
+
+    > p {
+      font-size: 12px;
+    }
+    &::after {
+      content: "";
+      border-bottom: 2px solid var.$borderOne;
+      border-right: 2px solid var.$borderOne;
+      position: absolute;
+      top: 80%;
+      left: 5%;
+      transform: rotate(45deg);
+      width: 1rem;
+      height: 1rem;
+      background: var.$bgSoft;
+    }
+  }
+}
 
 @keyframes scroll-left {
   0% {
