--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,8 @@
-@use 'variables/variables' as var;
-@use'variables/mixins';
-@use'components/buttons';
-@use 'layouts/calendar';
-@use 'layouts/list';
-@use 'layouts/roadmap';
-@use'components/task-drawer';
-
-
-
-
+@use "variables/variables" as var;
+@use "variables/mixins";
+@use "components/buttons";
+@use "layouts/calendar";
+@use "layouts/list";
+@use "layouts/roadmap";
+@use "components/task-drawer";
+@use "components/calendar-days";
