--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -1,69 +1,71 @@
 // Mixins:
-@use '../variables/variables' as var;
-@mixin flex-center($full-size:true) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    @if $full-size {
-        width: 100%;
-        height: 100%;
-    }
-   
-    
+@use "../variables/variables" as var;
+@mixin flex-center($full-size: true) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  @if $full-size {
+    width: 100%;
+    height: 100%;
+  }
 }
 @mixin flex-center-column {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
 }
 @mixin flex-between($width) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: $width;
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: $width;
 }
-@mixin horizontal-carousel($gap: 1rem, $scrollSnap: true,$width) {
-    display: flex;
-    width: $width;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    gap: $gap;
-    scroll-behavior: smooth;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    @if $scrollSnap{
-        scroll-snap-type: x mandatory;
-        > * {  //all childs
-            scroll-snap-align: start;
-            flex-shrink: 0;
-        }
+@mixin horizontal-carousel($gap: 1rem, $scrollSnap: true, $width) {
+  display: flex;
+  width: $width;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: $gap;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  @if $scrollSnap {
+    scroll-snap-type: x mandatory;
+    > * {
+      //all childs
+      scroll-snap-align: start;
+      flex-shrink: 0;
     }
-    &::-webkit-scrollbar {
-        display: none;
-    }
+  }
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
-    
-   
-@mixin set-text($weight-name, $variant: 'main') {
-  @if $variant == 'main' {
+
+@mixin set-text($weight-name, $variant: "main") {
+  @if $variant == "main" {
     color: var.$textPrimary;
     font-size: 18px;
-  } @else if $variant == 'secondary' {
+  } @else if $variant == "secondary" {
     color: var.$textSecondary;
     font-size: 16px;
-  } @else if $variant == 'emphasized' {
+  } @else if $variant == "emphasized" {
     color: var.$textPrimary;
     font-size: 16px;
   }
 
   font-weight: map-get(var.$font-weights, $weight-name);
 }
-@mixin calendar-button($width:1rem,$height:1rem, $weight-name, $variant: 'main') {
+@mixin calendar-button(
+  $width: 1rem,
+  $height: 1rem,
+  $weight-name,
+  $variant: "main"
+) {
   @include set-text($weight-name, $variant);
   border: none;
   outline: none;
@@ -72,25 +74,23 @@
   height: $height;
   margin: 0 0.5rem;
 }
-@mixin no-text-btn($size,$color){
+@mixin no-text-btn($size, $color) {
   border: none;
   outline: none;
   background: transparent;
-  width: $size ;
+  width: $size;
   height: $size;
   margin: 0 0.5rem;
   color: $color;
-  filter: drop-shadow(5px 8px 15px darken($color,20%));
+  filter: drop-shadow(5px 8px 15px darken($color, 20%));
 }
-@mixin glass-modal($minor:false){
+@mixin glass-modal($minor: false) {
   background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
   backdrop-filter: blur(20px) saturate(120%);
   -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
-  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.05),
-             0 8px 24px rgba(0, 0, 0, 0.6);
-  @if $minor{
+  box-shadow: var.$shadow-light;
+
+  @if $minor {
     background: rgba(65, 65, 65, 0.164);
   }
- }
- 
-  
+}
