--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,18 +1,23 @@
 // Colors:
-$primary:#0d0d0d; //tło głowne
+$primary: #0d0d0d; //tło głowne
 $bgSoft: #1c1c1e; /* Karty, modale */
 $glassBg: rgba(22, 22, 22, 0.6); /* Glassmorphic okna */
-$textPrimary: #ffffff; 
+$textPrimary: #ffffff;
 $textSecondary: #aaaaaa;
-$textBlack:#000;
+$textBlack: #000;
 $divider: rgba(117, 112, 112, 0.404);
 $bgMajor: #262629;
 $activedayBG: rgba(107, 205, 206, 0.1);
-$filterGreen:#62c76b;
-$itemMedium: #FF8C32;
+$filterGreen: #62c76b;
+$itemMedium: #ff8c32;
 $itemHigh: #db5656;
+$borderOne: rgba(107, 106, 106, 0.1);
 
 /*  Akcenty */
+$shadow-main: inset 0 1px 1px rgba(255, 255, 255, 0.05),
+  0 8px 24px rgba(0, 0, 0, 0.6);
+$shadow-light: inset 0 1px 1px rgba(200, 220, 255, 0.35),
+  0 8px 15px rgba(200, 220, 255, 0.15);
 $accent: #6bcdce;
 $accentLight: #9be5ec;
 $accentBorder: #44787c;
@@ -29,10 +34,10 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 //Fonts and weights
-$mainFont: 'Oxanium', sans-serif;
+$mainFont: "Oxanium", sans-serif;
 $font-weights: (
-  'light': 300,
-  'regular': 400,
-  'medium': 500,
-  'bold': 700
+  "light": 300,
+  "regular": 400,
+  "medium": 500,
+  "bold": 700,
 );
