--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,30 @@
-@charset "UTF-8";
 /* Karty, modale */
 /* Glassmorphic okna */
 /*  Akcenty */
-.calendar__button {
-  color: #aaaaaa;
-  font-size: 16px;
-  font-weight: 500;
+.calendar__months-nav {
   border: none;
   outline: none;
   background: transparent;
   width: 1rem;
   height: 1rem;
-  margin: 0 0.5rem;
+  margin: 0;
+  color: #aaaaaa;
+  filter: drop-shadow(5px 8px 15px #777777);
 }
 
 .calendar__section {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 100%;
-  height: 100%;
 }
 
 .calendar {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   position: relative;
   width: 100%;
   font-family: "Oxanium", sans-serif;
@@ -36,13 +33,16 @@
 }
 .calendar__months {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   position: relative;
   width: 100%;
-  height: 100%;
 }
 .calendar__months-carousel {
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 18px;
   display: flex;
   width: 6rem;
   flex-wrap: nowrap;
@@ -52,16 +52,13 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 500;
+}
+.calendar__months-carousel::-webkit-scrollbar {
+  display: none;
 }
 .calendar__months-carousel > * {
   scroll-snap-align: start;
   flex-shrink: 0;
-}
-.calendar__months-carousel::-webkit-scrollbar {
-  display: none;
 }
 .calendar__months-carousel-month {
   justify-content: center;
@@ -69,7 +66,6 @@
   scroll-snap-align: center;
   flex: 0 0 100%;
   text-align: center;
-  width: 4.5rem;
 }
 .calendar__months-carousel-month--active {
   color: #9be5ec;
@@ -82,18 +78,20 @@
 }
 .calendar__days {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   position: relative;
   width: 100%;
-  height: 100%;
   margin: 1rem 0;
   overflow-x: auto;
 }
 .calendar__days-selector {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   width: 90%;
 }
 .calendar__grid {
@@ -135,12 +133,12 @@
 
 .task-drawer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   position: relative;
   width: 100%;
-  background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
+  background: rgba(65, 65, 65, 0.089);
   backdrop-filter: blur(20px) saturate(120%);
   -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
   box-shadow: inset 0 1px 1px rgba(200, 220, 255, 0.35), 0 8px 15px rgba(200, 220, 255, 0.15);
@@ -155,9 +153,9 @@
 }
 .task-drawer__btn-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   position: relative;
   width: 100%;
   position: absolute;
@@ -169,7 +167,7 @@
   background: transparent;
   width: 1.5rem;
   height: 1.5rem;
-  margin: 0 0.5rem;
+  margin: 0.5rem;
   color: #62c76b;
   filter: drop-shadow(5px 8px 15px rgb(51.2676056338, 143.7323943662, 59.5070422535));
 }
@@ -177,7 +175,7 @@
   transform: translateY(0%);
 }
 .task-drawer__task-list {
-  gap: 1rem;
+  padding: 2rem;
   display: flex;
   width: 75%;
   flex-wrap: nowrap;
@@ -187,15 +185,13 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
-  padding: 2rem;
-  flex-wrap: nowrap;
+}
+.task-drawer__task-list::-webkit-scrollbar {
+  display: none;
 }
 .task-drawer__task-list > * {
   scroll-snap-align: start;
   flex-shrink: 0;
-}
-.task-drawer__task-list::-webkit-scrollbar {
-  display: none;
 }
 .task-drawer__task-list-item {
   overflow: hidden;
@@ -203,7 +199,7 @@
   min-height: 4rem;
   border-radius: 5px;
   padding: 0.5rem;
-  background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
+  background: rgba(65, 65, 65, 0.089);
   backdrop-filter: blur(20px) saturate(120%);
   -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
   box-shadow: inset 0 1px 1px rgba(200, 220, 255, 0.35), 0 8px 15px rgba(200, 220, 255, 0.15);
@@ -242,9 +238,9 @@
   background: transparent;
   width: 1.5rem;
   height: 1.5rem;
-  margin: 0 0.5rem;
+  margin: 0;
   color: #000;
-  filter: drop-shadow(5px 8px 15px black);
+  filter: drop-shadow(5px 8px 15px hsl(0, 0%, -20%));
   background-color: #62c76b;
   height: 2.5rem;
   right: -0.8rem;
@@ -258,9 +254,12 @@
   background-color: #db5656;
 }
 .task-drawer__task-info-btn svg {
+  position: relative;
   margin-top: 0.3rem;
   transform: skewX(45deg);
   width: 1rem;
+  top: 0.1rem;
+  left: -0.3rem;
 }
 .task-drawer__tooltip {
   display: flex;
@@ -299,15 +298,14 @@
   }
 }
 .calendar__weekday-btn {
-  color: #ffffff;
-  font-size: 16px;
-  font-weight: 300;
   border: none;
   outline: none;
   background: transparent;
   width: 3rem;
   height: 2rem;
-  margin: 0 0.5rem;
+  margin: 0;
+  color: #aaaaaa;
+  font-weight: 300;
   font-size: 12px;
   line-height: 2rem;
   padding-bottom: 0.25rem;
