--- a/scss/components/calendar-days.scss
+++ b/scss/components/calendar-days.scss
@@ -1,9 +1,12 @@
+@use "sass:map";
 @use "../variables/variables" as var;
 @use "../variables/mixins";
+
 // days navbar
 .calendar__weekday-btn {
-  @include mixins.calendar-button(3rem, 2rem, "light", "emphasized");
-  font-size: 12px;
+  @include mixins.styled-button($size-w: 3rem, $size-h: 2rem);
+  @include mixins.set-text("secondary", "light", "md");
+
   line-height: 2rem;
   padding-bottom: 0.25rem;
   border-right: 1px solid var.$divider;
@@ -23,7 +26,7 @@
     border-image: linear-gradient(to bottom, transparent 50%, var.$accent) 1;
     border-radius: 0 0 7px 7px;
     border-bottom-color: var.$accent;
-    font-weight: map-get(var.$font-weights, "regular");
+    font-weight: map.get(var.$fontWeights, "regular");
     filter: drop-shadow(1px 2px 5px var.$accentBorder);
   }
   &:last-child {
