--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -1,38 +1,44 @@
 // Mixins:
 @use "../variables/variables" as var;
-@mixin flex-center($full-size: true) {
+@use "sass:map";
+@use "sass:color";
+
+@mixin flex(
+  $direction: column,
+  $justify: center,
+  $align: center,
+  $width: null,
+  $height: null
+) {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
   position: relative;
-  @if $full-size {
-    width: 100%;
-    height: 100%;
+
+  @if $width {
+    width: $width;
+  }
+  @if $height {
+    height: $height;
   }
 }
-@mixin flex-center-column {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-}
-@mixin flex-between($width) {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: $width;
-}
-@mixin horizontal-carousel($gap: 1rem, $scrollSnap: true, $width) {
+
+@mixin horizontal-carousel($width: auto, $gap: 1rem, $scrollSnap: true) {
   display: flex;
   width: $width;
   flex-wrap: nowrap;
   overflow-x: auto;
   gap: $gap;
+
+  // hide scrollbars for all browsers
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   @if $scrollSnap {
     scroll-snap-type: x mandatory;
     > * {
@@ -41,51 +47,34 @@
       flex-shrink: 0;
     }
   }
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
-@mixin set-text($weight-name, $variant: "main") {
-  @if $variant == "main" {
-    color: var.$textPrimary;
-    font-size: 18px;
-  } @else if $variant == "secondary" {
-    color: var.$textSecondary;
-    font-size: 16px;
-  } @else if $variant == "emphasized" {
-    color: var.$textPrimary;
-    font-size: 16px;
-  }
-
-  font-weight: map-get(var.$font-weights, $weight-name);
+@mixin set-text($variant, $weightName, $sizeName) {
+  color: map.get(var.$textColors, $variant);
+  font-weight: map.get(var.$fontWeights, $weightName);
+  font-size: map.get(var.$fontSize, $sizeName);
 }
-@mixin calendar-button(
-  $width: 1rem,
-  $height: 1rem,
-  $weight-name,
-  $variant: "main"
-) {
-  @include set-text($weight-name, $variant);
+
+@mixin styled-button($size-w, $size-h: null, $color: null, $margin: 0) {
   border: none;
   outline: none;
   background: transparent;
-  width: $width;
-  height: $height;
-  margin: 0 0.5rem;
-}
-@mixin no-text-btn($size, $color) {
-  border: none;
-  outline: none;
-  background: transparent;
-  width: $size;
-  height: $size;
-  margin: 0 0.5rem;
-  color: $color;
-  filter: drop-shadow(5px 8px 15px darken($color, 20%));
+
+  @if $size-h == null {
+    width: $size-w;
+    height: $size-w;
+  } @else {
+    width: $size-w;
+    height: $size-h;
+  }
+  margin: $margin;
+  @if $color != null {
+    color: $color;
+    filter: drop-shadow(5px 8px 15px color.adjust($color, $lightness: -20%));
+  }
 }
 @mixin glass-modal($minor: false) {
-  background: rgba(65, 65, 65, 0.089); /* ciemne półprzezroczyste tło */
+  background: rgba(65, 65, 65, 0.089);
   backdrop-filter: blur(20px) saturate(120%);
   -webkit-backdrop-filter: blur(20px) saturate(120%) brightness(1.4);
   box-shadow: var.$shadow-light;
