--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Karty, modale */
 /* Glassmorphic okna */
 /*  Akcenty */
@@ -15,6 +14,7 @@
   align-self: center;
 }
 
+/*CALENDAR =============================================*/
 .calendar__section {
   display: flex;
   flex-direction: column;
@@ -111,33 +111,6 @@
   text-align: center;
   justify-content: center;
 }
-.calendar__meta {
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-.calendar__week {
-  display: grid;
-  grid-column: 2;
-  grid-row: 1;
-  justify-content: center;
-  min-width: 0;
-  color: #aaaaaa;
-  font-weight: 300;
-  font-size: 10px;
-}
-.calendar__year {
-  display: grid;
-  grid-column: 2;
-  grid-row: 2;
-  white-space: nowrap;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 18px;
-}
 .calendar__days {
   display: flex;
   flex-direction: row;
@@ -192,6 +165,7 @@
   border-image: linear-gradient(to left, transparent 1%, rgba(117, 112, 112, 0.404)) 1;
 }
 
+/*TASK DRAWER MODAL =============================================*/
 .task-drawer {
   display: flex;
   flex-direction: column;
@@ -358,6 +332,7 @@
     transform: translateX(-100%);
   }
 }
+/*DAY NAVBAR =============================================*/
 .calendar__weekday-btn {
   border: none;
   outline: none;
@@ -398,6 +373,7 @@
   --meta-nav-w: 2.25rem;
 }
 
+/*YEAR AND WEEK =============================================*/
 .calendar__meta {
   grid-column: 2;
   grid-row: 1/span 2;
@@ -449,7 +425,6 @@
 }
 
 .calendar__meta-carousel {
-  /* jak Twoje karuzele: 1 element = 100% */
   min-width: 0;
   display: flex;
   width: auto;
@@ -460,9 +435,8 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   scroll-snap-type: x mandatory;
-  /* bez $width */
   overscroll-behavior-x: contain;
-  scroll-padding-inline: 0; /* ważne: brak dryfu */
+  scroll-padding-inline: 0;
 }
 .calendar__meta-carousel::-webkit-scrollbar {
   display: none;
