--- a/scss/layouts/_calendar.scss
+++ b/scss/layouts/_calendar.scss
@@ -1,7 +1,7 @@
 @use "../variables/variables" as var;
 @use "../variables/mixins";
 @use "sass:map";
-
+/*CALENDAR =============================================*/
 .calendar__section {
   @include mixins.flex;
 }
@@ -26,7 +26,6 @@
     min-width: 0;
   }
 
-  //months
   &__months {
     display: grid;
     grid-column: 1;
@@ -79,26 +78,7 @@
       }
     }
   }
-  &__meta {
-    @include mixins.flex($direction: column-reverse);
-  }
-  &__week {
-    display: grid;
-    grid-column: 2;
-    grid-row: 1;
-    justify-content: center;
-    min-width: 0;
-    @include mixins.set-text("secondary", "light", "sm");
-  }
-  &__year {
-    display: grid;
-    grid-column: 2;
-    grid-row: 2;
-    white-space: nowrap;
-    letter-spacing: 0.02em;
-    @include mixins.set-text("main", "bold", "xl");
-  }
-  //days
+
   &__days {
     @include mixins.flex($direction: row, $width: 100%);
     margin: 1rem 0;
@@ -111,7 +91,7 @@
       );
     }
   }
-  //Hour grid
+
   &__grid {
     position: relative;
     height: calc(100vh - 25rem);
