--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -1,7 +1,7 @@
 // Colors:
-$primary: #0d0d0d; //tło głowne
-$bgSoft: #1c1c1e; /* Karty, modale */
-$glassBg: rgba(22, 22, 22, 0.6); /* Glassmorphic okna */
+$primary: #0d0d0d;
+$bgSoft: #1c1c1e;
+$glassBg: rgba(22, 22, 22, 0.6);
 $textPrimary: #ffffff;
 $textSecondary: #aaaaaa;
 $textBlack: #000;
@@ -13,7 +13,7 @@ $itemMedium: #ff8c32;
 $itemHigh: #db5656;
 $borderOne: rgba(107, 106, 106, 0.1);
 
-/*  Akcenty */
+//  Accents
 $shadow-main: inset 0 1px 1px rgba(255, 255, 255, 0.05),
   0 8px 24px rgba(0, 0, 0, 0.6);
 $shadow-light: inset 0 1px 1px rgba(200, 220, 255, 0.35),
